[gd_scene load_steps=7 format=2]

[ext_resource path="res://SampleGhost4.gd" type="Script" id=1]
[ext_resource path="res://sounds/fail.wav" type="AudioStream" id=2]

[sub_resource type="CubeMesh" id=7]
size = Vector3( 0.5, 1, 0.5 )

[sub_resource type="SpatialMaterial" id=92]
flags_unshaded = true
flags_do_not_receive_shadows = true
albedo_color = Color( 0.639216, 0.686275, 0.054902, 1 )

[sub_resource type="BoxShape" id=6]
extents = Vector3( 0.25, 0.5, 0.25 )

[sub_resource type="SphereShape" id=93]
radius = 0.75

[node name="SampleGhost4" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 59.326, 0.5, -3.155 )
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 7 )
material/0 = SubResource( 92 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 6 )

[node name="Ghost4Timer" type="Timer" parent="."]
wait_time = 12.0
autostart = true

[node name="GhostArea" type="Area" parent="."]

[node name="PlayerHitBox" type="CollisionShape" parent="GhostArea"]
shape = SubResource( 93 )

[node name="GhostSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[connection signal="timeout" from="Ghost4Timer" to="." method="_on_Ghost4Timer_timeout"]
[connection signal="body_entered" from="GhostArea" to="." method="_on_GhostArea_body_entered"]
